The revision history file for Net-Pfring, a perl extension of PF-RING

0.01    2008-05-18 - Rocco Carbone <rocco /at/ ntop /dot/ org>
  o initial implementation using a template for z39.50 I made several years ago