@@ -11,8 +11,8 @@ my $got;
 $| = 1;
 
 # Open
-print "Attempting to open $device ... ";
-$ring = Net::Pfring::Open($device, 1, $snaplen) || die "failed!\n";
+print "Attempting to open device $device ... ";
+$ring = Net::Pfring::open($device, 1, $snaplen) || die "failed!\n";
 print "ok\n";
 
 # Capturing
@@ -20,7 +20,7 @@ print "Attempting to receive packets ...\n";
 
 while (! $packets || $got < $packets)
   {
-    $packet = Net::Pfring::Next($ring);
+    $packet = Net::Pfring::next($ring);
     if ($packet)
       {
 	$got ++;
@@ -29,6 +29,6 @@ while (! $packets || $got < $packets)
   }
 
 print "Done! captured #$got packets at the application level\n";
-Net::Pfring::Close($ring);
+Net::Pfring::close($ring);
 
 1;
