@@ -15,6 +15,8 @@
 
 use Net::Pfring;
 
+my $loaded = 0;
+
 BEGIN { $| = 1; print "1..1\n"; }
 END {print "not ok 1\n" unless $loaded;}
 
