@@ -1,7 +1,7 @@
 #
 # Perl Net-Pfring - Perl binding for PF_RING
 #
-# 07-version.t - test for open/version/close on PF_RING aware devices
+# 08-version.t - test for open/version/close on PF_RING aware devices
 #
 # Copyright (c) 2008 Rocco Carbone <rocco /at/ ntop /dot/ org>
 #
@@ -16,19 +16,17 @@
 use Test::More tests => 1;
 use_ok ('Net::Pfring');
 
-# BEGIN { $| = 1; print "1..1\n"; }
-# END {print "not ok 1\n" unless $ring;}
-
 my $device  = "eth0";
 my $snaplen = 1500;
+my $ring;
 
 my $major;
 my $minor;
 my $patch;
 
-$ring = Net::Pfring::Open($device, 1, $snaplen) || die "not ok 1\n";
-($major, $minor, $patch) = Net::Pfring::Version($ring);
-Net::Pfring::Close($ring);
+$ring = Net::Pfring::open($device, 1, $snaplen) || die "not ok 1\n";
+($major, $minor, $patch) = Net::Pfring::version($ring);
+Net::Pfring::close($ring);
 
 diag ("using PF-Ring ver $minor.$major.$patch\n");
 
