@@ -1,4 +1,15 @@
-The revision history file for Net-Pfring, a perl extension of PF-RING
+The revision history file for Net-Pfring, a perl extension of PF_RING
 
 0.01    2008-05-18 - Rocco Carbone <rocco /at/ ntop /dot/ org>
   o initial implementation using a template for z39.50 I made several years ago
+
+    - [FEATURE] compiles and works with Perl 5.8.8
+
+    - [FEATURE] implemented functions: open, close, next, stats, version
+
+    - [FEATURE] exported pfring_xxx aliases functions for better usability
+
+    - [TESTS] wrote a minimal test suite using Test::More
+
+    - [DOC] just a minimal Pod documentation to start writing user applications
+
